Add '25w37a' sources